Fix cards overflow in about page

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,11 +31,9 @@ textarea {
 .container {
   position: relative;
   margin: 0 15vw;
-  width: 70vw;
 
   @media (max-width: 872px) {
     margin: 0 5vw;
-    width: 90vw;
   }
 }
 
