--- a/src/Pages/AboutPage/index.scss
+++ b/src/Pages/AboutPage/index.scss
@@ -6,5 +6,5 @@
     font-family: "DM Sans", serif;
     font-style: normal;
     line-height: 0.85;
-    font-size: 16vw;
+    font-size: 15.8vw;
 }
